--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <title>Scarpe</title>
 </head>
 
 <body>
-    <h1>ciao</h1>
+    <div class="page-1 full-page">
+        <h2 class="title-page">Il nostro prodotto di punta</h2>
+    </div>
+    <div class="page-2 full-page">
+        <h2 class="title-page">Il nostro prodotto di punta</h2>
+    </div>
+    <div class="page-3 full-page">
+        <h2 class="title-page">Il nostro prodotto di punta</h2>
+    </div>
+
+
 </body>
 
 </html>
