--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
 </head>
 
 <body>
-    <div class="page-1 full-page">
+    <nav id="main-menu">
+        <ul>
+            <li><a href="#1">1</a></li>
+            <li><a href="#2">2</a></li>
+            <li><a href="#3">3</a></li>
+        </ul>
+    </nav>
+    <div class="page-1 full-page" id="1">
         <h2 class="title-page">Il nostro prodotto di punta</h2>
     </div>
-    <div class="page-2 full-page">
+    <div class="page-2 full-page" id="2">
         <h2 class="title-page">Il nostro prodotto di punta</h2>
     </div>
-    <div class="page-3 full-page">
+    <div class="page-3 full-page" id="3">
         <h2 class="title-page">Il nostro prodotto di punta</h2>
     </div>
 
