--- a/index.html
+++ b/index.html
@@ -20,13 +20,23 @@
         </ul>
     </nav>
     <div class="page-1 full-page" id="1">
-        <h2 class="title-page">Il nostro prodotto di punta</h2>
+
+        <div class="content">
+            <img src="./img/01.png" alt="">
+            <h2 class="title-page">Il nostro prodotto di punta</h2>
+        </div>
     </div>
     <div class="page-2 full-page" id="2">
-        <h2 class="title-page">Il nostro prodotto di punta</h2>
+        <div class="content">
+            <img src="./img/02.png" alt="">
+            <h2 class="title-page">Il nostro prodotto di punta</h2>
+        </div>
     </div>
     <div class="page-3 full-page" id="3">
-        <h2 class="title-page">Il nostro prodotto di punta</h2>
+        <div class="content">
+            <img src="./img/03.png" alt="">
+            <h2 class="title-page">Il nostro prodotto di punta</h2>
+        </div>
     </div>
 
 
